--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Life in Pakistan</h1>
+		<h1>Colors of Pakistan</h1>
 		<div class="container">
 			<img src="https://images.pexels.com/photos/1751226/pexels-photo-1751226.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
 			<img src="https://images.pexels.com/photos/2863202/pexels-photo-2863202.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
