CSS Grid & Flexbox
CSS Grid & Flexbox

--- a/index.html
+++ b/index.html
@@ -5,19 +5,42 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
+ 	<div class="main-nav">
 		<h1>Colors of Pakistan</h1>
-		<div class="container">
+	</div>
+	</nav>
+		<div class="grid-wrapper">
+			<div class="box">
 			<img src="https://images.pexels.com/photos/1751226/pexels-photo-1751226.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+			</div>
+			<div class="box">
 			<img src="https://images.pexels.com/photos/2863202/pexels-photo-2863202.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+		    <div class="box">
 			<img src="https://images.pexels.com/photos/1590114/pexels-photo-1590114.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+			<div class="box">
 			<img src="https://images.pexels.com/photos/2562345/pexels-photo-2562345.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+		    <div class="box">
 			<img src="https://images.pexels.com/photos/2884865/pexels-photo-2884865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+		    <div class="box">
 			<img src="https://images.pexels.com/photos/3103373/pexels-photo-3103373.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+		    <div class="box">
 			<img src="https://images.pexels.com/photos/2043450/pexels-photo-2043450.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+			</div>
+			<div class="box">
 			<img src="https://images.pexels.com/photos/2863219/pexels-photo-2863219.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		    </div>
+		    <div class="box">
 			<img src="https://images.pexels.com/photos/415969/pexels-photo-415969.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+		   </div>
 		</div>
-	</header>
+	 <footer>
+	 	<p>Nothing beats the hospitality of Pakistan.<br/>
+	 	Vist Pakistan see for your self.</p>
+	 </footer>
 </body>
 </html>
