Changes for .yml

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  	<div class="main-nav">
-		<h1>Colors of Pakistan</h1>
+		<h1>The Land of Hospitality</h1>
 	</div>
 	</nav>
 		<div class="grid-wrapper">
